@@ -159,14 +159,17 @@ BUG FIXES
 	inconsistent time zones are used.
 
     o   File creation errors in pdf(), postscript(), xfig() resulted
-        in a pointer being freed twice. (reported by Matt McCall)
+        in a pointer being freed twice.  (Reported by Matt McCall)
 
-    o   as.function.default no longer asks for a bug report when
+    o   as.function.default() no longer asks for a bug report when
 	given an invalid body. (PR#1880, PR#7535, PR#7702)
 
     o   Hershey fonts and grid output (and therefore lattice output) 
 	now rescale correctly in fit-to-window resizing on a Windows
 	graphics device.  Line widths also scale now.
+
+    o	Plotmath has more support for multibyte characters (contributed
+	by Ei-ji Nakama).
 
 
 
